--- a/frontend/allpack/layout/footer.ejs
+++ b/frontend/allpack/layout/footer.ejs
@@ -50,9 +50,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="copyright text-center">
-                    &copy; 2025 Dream Day Visuals. All Rights Reserved. | 
-                    <a href="/privacy" class="text-muted mx-2" style="text-decoration: none;">Privacy Policy</a> | 
-                    <a href="/terms" class="text-muted mx-2" style="text-decoration: none;">Terms of Service</a>
+                    &copy; 2025 Dream Day Visuals. All Rights Reserved.
                 </div>
             </div>
         </div>
