--- a/frontend/allpack/layout/navbar.ejs
+++ b/frontend/allpack/layout/navbar.ejs
@@ -40,12 +40,19 @@
         </li>
         <li class="nav-item">
           <a class="nav-link <%= activePage === 'suppliers' ? 'active' : '' %>" href="/suppliers">
-            <i class="fas fa-camera me-1"></i> Suppliers
+            <i class="fas fa-store me-2"></i> Suppliers Form
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link <%= activePage === 'booking' ? 'active' : '' %>" href="/booking">
             <i class="fas fa-bookmark me-1"></i> Book Consultation
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link <%= activePage === 'contact' ? 'active' : '' %>" href="/contact">
+         <i class="fas fa-phone me-1"></i> Contact
+
+
           </a>
         </li>
       </ul>
